Merge of bugfix230 and major300 branches
git-svn-id: http://svn.codehaus.org/esper/esper/trunk@1651 d91eb1b3-1215-0410-9718-d41490442091